[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/map/fade_out_text.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/nokiafc22.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/sprites/characters/candidate_portraits/team_a_candidate.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/symbols/cheese.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="FadeOutText" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HorizontalContainer" type="HBoxContainer" parent="."]
rect_min_size = Vector2( 0, 36 )

[node name="AmountLabel" type="Label" parent="HorizontalContainer"]
margin_top = 5.0
margin_right = 54.0
margin_bottom = 35.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "+23"
align = 1
valign = 1

[node name="ResourceTextureRect" type="TextureRect" parent="HorizontalContainer"]
margin_left = 58.0
margin_right = 98.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 1

[node name="ToLabel" type="Label" parent="HorizontalContainer"]
margin_left = 102.0
margin_top = 5.0
margin_right = 132.0
margin_bottom = 35.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "to"
align = 1
valign = 1

[node name="CharacterPortraitTextureRect" type="TextureRect" parent="HorizontalContainer"]
margin_left = 136.0
margin_right = 190.0
margin_bottom = 40.0
rect_min_size = Vector2( 54, 40 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
